--- a/package.json
+++ b/package.json
@@ -1,14 +1,20 @@
 {
   "name": "server",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "",
+  "private": true,
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app"
   },
   "author": "Maksim Vugnyavyy",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "jade": "*"
+  },
+  "engines": {
+  	"node": "6.10.x",
+  	"npm": "3.10.x"
   }
 }
