--- a/package.json
+++ b/package.json
@@ -1,20 +1,16 @@
 {
   "name": "server",
   "version": "0.0.1",
-  "description": "",
   "private": true,
-  "main": "server.js",
   "scripts": {
-    "start": "node app"
+    "start": "node server"
   },
-  "author": "Maksim Vugnyavyy",
-  "license": "ISC",
   "dependencies": {
     "express": "^4.15.2",
     "jade": "*"
   },
   "engines": {
-  	"node": "6.10.x",
+    "node": "6.10.x",
   	"npm": "3.10.x"
   }
 }
